--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -104,3 +104,57 @@ h2 {
     margin-left: 30px;
     border-radius: 50%;
 }
+
+.website-container{
+    display: flex; 
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin: 80px 25px; 
+}
+
+.website1, .website2, .website3, .website4, .website5, .website6, .website7, .website8{
+    width: 300px;
+    height: 125px; 
+}
+
+.ecommerce, .laptop, .responsive, .shopify, .wordpress, .woocommerce{
+    width: 200px;
+    height: 200px;
+}
+
+.icon-container{
+    display: flex; 
+    flex-wrap: wrap; 
+    justify-content: space-between;
+}
+
+.icon{
+    margin: 80px; 
+}
+
+.service-description{
+    text-align: center;
+}
+
+.about-us{
+    margin: 80px 25px; 
+}
+
+.list{
+    display: flex;
+    flex-direction: column;
+}
+
+.footer{
+    display: flex; 
+    justify-content: space-evenly;
+    border-top: 2px solid #52de97;
+    border-bottom: 2px solid #52de97;
+    width: 100%;
+    height: 200px; 
+    padding-top: 100px; 
+}
+
+.copyright{
+    text-align: center;
+}
