--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -92,8 +92,8 @@ h2 {
 .submit-btn{
     height: 40px;
     width: 20%;
-    background-color: rgb(199, 195, 195);
-    border: gray solid 3px;
+    background-color: white;
+    border: white;
     font-size: 20px;
     color: black;
     /* //margin-top: 50px; */
