--- a/styles.css
+++ b/styles.css
@@ -431,8 +431,11 @@ h2 {
     }
 
     .navbar li {
-        display: inline;
         font-size: 1rem;
+    }
+
+    .navbar li {
+        display: inline-block;
     }
 
     .header {
